--- a/app/src/main/res/drawable/bg_rect_gold.xml
+++ b/app/src/main/res/drawable/bg_rect_gold.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/gold" />
+        android:color="@color/orange" />
 
-    <solid android:color="#ff7200" />
+    <solid android:color="#f89053" />
 
     <padding
         android:left="1dp"
