--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -68,8 +68,8 @@
                 android:fontFamily="sans-serif-condensed-medium"
                 android:gravity="center"
                 android:scaleType="center"
-                android:textColor="#E6E8F3"
-                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:textSize="14sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
