--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gold">#fbaf3d</color>
-    <color name="orange">#ff7200</color>
+    <color name="orange">#f89053</color>
 </resources>
