--- a/app/src/main/res/layout/item_registration_str.xml
+++ b/app/src/main/res/layout/item_registration_str.xml
@@ -90,7 +90,7 @@
     </ImageView>
 
     <ImageButton
-        android:id="@+id/buttonSave"
+        android:id="@+id/buttonSaveRegistration"
         android:layout_width="201dp"
         android:layout_height="49dp"
         android:layout_marginStart="104dp"
