--- a/uikit/src/main/res/values/dimens.xml
+++ b/uikit/src/main/res/values/dimens.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="d_0">0dp</dimen>
+    <dimen name="d_2">2dp</dimen>
     <dimen name="d_6">6dp</dimen>
     <dimen name="d_10">10dp</dimen>
     <dimen name="d_12">12dp</dimen>
+    <dimen name="d_14">14dp</dimen>
     <dimen name="d_16">16dp</dimen>
     <dimen name="d_20">20dp</dimen>
+    <dimen name="d_32">32dp</dimen>
+    <dimen name="d_42">42dp</dimen>
 </resources>
