--- a/uikit/src/main/res/values/themes.xml
+++ b/uikit/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Papino" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="background">@drawable/il_basket_backgroud</item>
