--- a/uikit/src/main/res/values/texts.xml
+++ b/uikit/src/main/res/values/texts.xml
@@ -62,4 +62,13 @@
         <item name="android:textSize">20sp</item>
         <item name="android:lineHeight" tools:ignore="NewApi">28sp</item>
     </style>
+
+    <style name="PaPino.TextAppearances.Basket" />
+
+    <style name="PaPino.TextAppearances.Basket.Title">
+        <item name="android:textColor">@color/textPrimaryColor</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:lineHeight" tools:ignore="NewApi">28sp</item>
+    </style>
 </resources>
