--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/il_basket_backgroud"
+    android:background="@drawable/bg_rect_base"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,29 +36,6 @@
             android:src="@drawable/shopping_basket_24px"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/imgCabinet"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginHorizontal="5dp"
-            android:background="@drawable/shape_sphere"
-            android:src="@drawable/cabinet"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/tvBasketCount"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/buttonBackActivityMenu"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginVertical="14dp"
-            android:layout_marginStart="15dp"
-            android:background="@drawable/shape_sphere"
-            android:src="@drawable/buttonback"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
