--- a/uikit/src/main/res/layout/component_card_menu.xml
+++ b/uikit/src/main/res/layout/component_card_menu.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/imagePreview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/pizza_pepperoni_2" />
