--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,41 +9,48 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="120dp"
         android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tvBasketCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:textColor="@color/orange"
-            app:layout_constraintBottom_toBottomOf="@+id/imgBasket"
-            app:layout_constraintRight_toLeftOf="@+id/imgBasket"
-            app:layout_constraintTop_toTopOf="@+id/imgBasket"
-            tools:text="+10" />
+        android:orientation="vertical"
+        android:background="@drawable/bg_rect_base">
 
         <ImageView
-            android:id="@+id/imgBasket"
-            android:layout_width="40dp"
+            android:id="@+id/logoMain"
+            android:layout_width="140dp"
             android:layout_height="40dp"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginVertical="14dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/shape_sphere"
-            android:src="@drawable/shopping_basket_24px"
+            app:srcCompat="@drawable/main_menu_logo"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="20dp"/>
+
+        <TextView
+            android:id="@+id/nameUserHello"
+            android:layout_width="140dp"
+            android:layout_height="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/logoMain"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:id="@+id/countBonusUser"
+            android:layout_width="140dp"
+            android:layout_height="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/logoMain"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="18dp"
+            android:textColor="@color/yellowDenis"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/imageViewIcon"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="4dp"
-        app:srcCompat="@drawable/icoapp_menu_orange" />
 
     <LinearLayout
         android:layout_width="match_parent"
