--- a/uikit/src/main/res/layout/component_card_menu.xml
+++ b/uikit/src/main/res/layout/component_card_menu.xml
@@ -68,7 +68,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d_6"
-            android:drawableLeft="@drawable/ic_basket"
+            android:drawableLeft="@drawable/ic_16_basket"
+            android:drawableTint="@color/backgroundTopColor"
             android:paddingHorizontal="@dimen/d_10"
             app:layout_constraintBottom_toBottomOf="@+id/textPrice"
             app:layout_constraintEnd_toEndOf="parent"
