--- a/uikit/src/main/res/values/colors.xml
+++ b/uikit/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="backgroundInputColor">#353535</color>
     <color name="backgroundMenuColor">#EEEEEE</color>
     <color name="backgroundButtonGreyMedium">#E0E0E0</color>
+    <color name="backgroundNavigationColor">#424242</color>
 
     <!-- Палитра для элементов экрана -->
     <color name="elementPrimaryColor">#FFFFFF</color>
