--- a/uikit/src/main/res/values/dimens.xml
+++ b/uikit/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="d_14">14dp</dimen>
     <dimen name="d_16">16dp</dimen>
     <dimen name="d_20">20dp</dimen>
+    <dimen name="d_30">30dp</dimen>
     <dimen name="d_32">32dp</dimen>
     <dimen name="d_40">40dp</dimen>
     <dimen name="d_42">42dp</dimen>
