--- a/app/src/main/res/layout/acitivity_basket.xml
+++ b/app/src/main/res/layout/acitivity_basket.xml
@@ -12,6 +12,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:paddingHorizontal="@dimen/d_10"
+        android:paddingTop="@dimen/d_14"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/orderForm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
