--- a/uikit/src/main/res/values/dimens.xml
+++ b/uikit/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="d_32">32dp</dimen>
     <dimen name="d_40">40dp</dimen>
     <dimen name="d_42">42dp</dimen>
+    <dimen name="d_60">60dp</dimen>
 </resources>
